Works with callbacks

--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     <meta charset="utf-8">
-    <title>Timecard</title>
+    <title>Groupon/Yelp Integration</title>
     
     <!-- Added link to the jQuery Library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
