--- a/test2.html
+++ b/test2.html
@@ -95,7 +95,7 @@
     <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js" type="text/javascript"></script>
     <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
-    <script type="text/javascript" src="assets/javascript/test1.js"></script>
+    <script type="text/javascript" src="assets/javascript/javascript.js"></script>
 
 </body>
 
