--- a/design.html
+++ b/design.html
@@ -93,8 +93,14 @@
                     <i class="fas fa-utensils"></i>
                 </h3>
             </div>
-            <div class="card-body" id="resultsDiv">
-            </div>
+            <div class="card border-secondary mb-3">
+                <div class="card-body text-secondary">
+                        <table class="table table-striped">
+                                <tbody id="resultsDiv">
+                                </tbody>
+                              </table>
+    
+                </div>
         </div>
 
     </div>
