Pushed bug in open

--- a/design.html
+++ b/design.html
@@ -53,8 +53,8 @@
                         onmouseout="src='images/pizzaHover.svg'" />
                 </div>
                 <div class="card">
-                    <input type="image" src="images/japaneseHover.svg" class="food btn-warning card-img-top" id="searchJapanese" value ="japanese" onmouseover=" src='images/sushi.jpg', id='imgHover'"
-                        onmouseout="src='images/japaneseHover.svg'" />
+                    <input type="image" src="images/JapaneseHover.svg" class="food btn-warning card-img-top" id="searchJapanese" value ="japanese" onmouseover=" src='images/sushi.jpg', id='imgHover'"
+                        onmouseout="src='images/JapaneseHover.svg'" />
                 </div>
                 <div class="card">
                         <input type="image" src="images/allDeals.svg" class="food btn-warning card-img-top" id="allDealsButton" value="all" onmouseover=" src='images/taco.jpg', id='imgHover'"
@@ -92,7 +92,7 @@
                     Available Deals
                     <i class="fas fa-utensils"></i>
                 </h3>
-            </div>
+            </div>      <!-- John's new div -->
             <div class="card border-secondary mb-3">
                 <div class="card-body text-secondary">
                         <table class="table table-striped">
@@ -104,6 +104,8 @@
         </div>
 
     </div>
+
+
 
     <!-- Added link to the jQuery Library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
