--- a/design.html
+++ b/design.html
@@ -79,11 +79,6 @@
     </div>
     </div>
 
-    <div>
-        <div id="working"></div>
-        <br>
-    </div>
-
 
     <div class="container">
         <div class="card card-primary " style="width:100%;">
@@ -91,8 +86,10 @@
                 <h3 class="card-title text-center">
                     Available Deals
                     <i class="fas fa-utensils"></i>
-                </h3>
-            </div>      <!-- John's new div -->
+                </h3>        
+  
+            </div>    
+                <div id="working"></div>    <!-- John's new div -->
             <div class="card border-secondary mb-3">
                 <div class="card-body text-secondary">
                         <table class="table table-striped">
