small change to location of #working-div along with associciated CSS to drop it below available deals section

--- a/design.html
+++ b/design.html
@@ -78,7 +78,7 @@
                 </div>
 
             </div>
-            <div id="working"></div>
+            <!-- <div id="working"></div> -->
         </div>
     </div>
 
@@ -93,7 +93,7 @@
                     Available Deals
                     <i class="fas fa-utensils"></i>
                 </h3>
-
+                <div id="working"></div>
             </div>
 
             <!-- John's new div -->
